version 0.99
           * Now lives in mpl_toolkits.basemap.  Instead
             of 'from matplotlib.toolkits.basemap import Basemap',
             use 'from mpl_toolkits.basemap import Basemap'.
             All examples changed.  Uses matplotlib mpl_toolkits
             namespace package, so basemap can now be installed
             if matplotlib is installed as an egg. Python 2.3
             support re-enabled.
           * changed _geos to _geoslib, so as not to conflict with
             the python module bundled with the GEOS library.
           * some fixes/enhancements for omerc projection (added 'no_rot'
             flag).
           * added warpimage method for displaying an image background.
             Default is NASA's blue marble image, which is included.
version 0.9.9.1 (svn revision 4808)
           * require python 2.4 (really only needed for building).
             Once namespace packages are re-enabled in matplotlib,
             python 2.3 should work again.
version 0.9.9 (svn revision 4799)
           * updated proj4 sources to version 4.6.0.
           * removed hidden dependency on setuptools (in dap module).
           * fixed exception handling bug in code that looks for
             intersection between boundary feature and map projection
             region.
           * setup.py now looks for GEOS library in a few standard
             places (/usr/local, /opt, $HOME, /sw) if the GEOS_DIR
             environment variable not set.  This is a workaround for a
             new Leopard 'feature' (sudo does not inherit enviroment
             variables).
           * added support for reading Point and MultiPoint shapes
             from ESRI shapefiles.
           * now automatically draws figure if running in
            interactive mode (so draw() does not need
            to be called explicitly in ipython).
           * added num2date and date2num functions, which use 
             included netcdftime module.