@@ -1,4 +1,6 @@
 version 0.99
+           * added drawmapscale method to create a map scale bar similar
+             to that available with the GMT's psbasemap.
            * Now lives in mpl_toolkits.basemap.  Instead
              of 'from matplotlib.toolkits.basemap import Basemap',
              use 'from mpl_toolkits.basemap import Basemap'.
